536: Fixed IntelliJ findings.